# Gem

./: .gitattributes  .gitignore  .gitmodules  .test.c.swp  .travis.yml  CMakeLists.txt  README.md  README.rst  Untitled.ipynb  chart.js  cmake_uninstall.cmake.in  dimensions_8hpp.html  dir_37f5c295a6489dc0048ad4289d6b466a.html  dir_52c2a46eaea40ae3c602a5974e28a572.html  dir_6453705232514450ca64095a87e3edca.html  dir_b366782ae8963d08f4bbc252c361afd8.html  dir_e68e8157741866f444e17edd764ebbae.html  files.html  gem_8hpp.html  group__group-concepts.html  index.html  install.sh  install_manifest.txt  modules.html  namespacegem.html  namespacegem_1_1literals.html  namespaces.html  requirements.txt  uninstall.sh
cmake/: CheckCxxCompilerSupport.cmake  FindCereal.cmake  FindHana.cmake  gem.pc.in  valgrind.supp
doc/: CMakeLists.txt  Doxyfile.in  doc.hpp
doc/js/: gem.js
examples/: out.xml  test.cpp
gem/include/: dimensions.hpp  dimensions_tuple.hpp  gem.hpp  tensor.hpp  tensor_base.hpp  version.hpp
gem/include/cereal/: hana_binder.hpp
gem/include/concept/: dimensions.hpp  dimensions_common.hpp  dimensions_comparable.hpp  dimensions_group.hpp  dimensions_monoid.hpp  dimensions_orderable.hpp  dimensions_ring.hpp  dimensions_tag.hpp  dimensions_to.hpp
gem/include/fwd/: dimensions.hpp  dimensions_tuple.hpp
gem/include/fwd/concept/: dimensions.hpp  dimensions_monoid.hpp  dimensions_ring.hpp
include/gem/: dimensions.hpp  dimensions_tuple.hpp  gem.hpp  litterals.hpp  tensor.hpp  tensor_base.hpp  type.hpp
include/gem/cereal/: hana_binder.hpp
include/gem/concept/: dimensions.hpp  dimensions_common.hpp  dimensions_comparable.hpp  dimensions_group.hpp  dimensions_monoid.hpp  dimensions_orderable.hpp  dimensions_ring.hpp  dimensions_to.hpp  dimensions_tuple.hpp
include/gem/fwd/: dimensions.hpp  dimensions_tuple.hpp
search/: all_0.js  all_1.js  all_2.js  files_1.js  namespaces_0.js  searchdata.js
tests/: CMakeLists.txt  main.cpp
tests/dimensions/: base.cpp  common.cpp  comparable.cpp  group.cpp  monoid.cpp  orderable.cpp  ring.cpp  to.cpp  type.cpp
tests/io/: print.cpp
